Bug 994881 - Release audio offload player resources after pause timeout r=roc